# timeseries-storage

./: Cargo.toml  Makefile
scripts/: generate_queries.sh  generate_query.js  influx_to_json.py  load_small_data.sh
src/: client.rs  error.rs  main.rs
src/server/: execute.rs  mod.rs  record.rs  server.rs  store.rs
src/server/operators/: mod.rs  select.rs
testdata/: data_small.txt  data_tiny_1.txt  select_example copy.json  select_example.json
tests/: mock_tests.rs
