[package]
name = "timeseries-storage"
version = "0.1.0"
authors = ["Franco Solleza <iam@francosolleza.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
buffer = "0.1.8"
bincode = "1.3.1"
serde_json = "1.0.61"
serde = { version = "1.0.119", features = ["derive"] }
